--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+#Git ignore large files for band width optimization.
+ratings.csv
+movies_metadata.csv
+*.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
